internal-component.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-api
  labels:
    app: internal-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: internal-api
  template:
    metadata:
      labels:
        app: internal-api
    spec:
      containers:
        - name: internal-api
          image: <ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/internal-api:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: internal-api-svc
  labels:
    app: internal-api
spec:
  selector:
    app: internal-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
